Fixed align issues and sizing

--- a/tic-tac-toe-client/src/app/tic-tac-toe-board/tic-tac-toe-board.component.css
+++ b/tic-tac-toe-client/src/app/tic-tac-toe-board/tic-tac-toe-board.component.css
@@ -1,12 +1,12 @@
 #container {
   position  : relative;
   margin    : 0.5em;
-  width: 300px;
-  height: 300px;
+  width: 600px;
+  height: 800px;
   align-self: center;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 500px) {
   #container {
     position: relative;
     margin: 0.5em;
